Fixed some design issues around cards
Reverted drop shadow change.
Fixed header line-height when linked.
Fixed overflowing paragraph text. Fixes #533.

--- a/resources/assets/sass/_blocks.scss
+++ b/resources/assets/sass/_blocks.scss
@@ -185,7 +185,7 @@
 .card {
   margin: $-m;
   background-color: #FFF;
-  box-shadow: 0 0.5px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.2);
   h3 {
     padding: $-m;
     border-bottom: 1px solid #E8E8E8;
@@ -195,10 +195,13 @@
     font-weight: 400;
     text-transform: uppercase;
   }
+  h3 a {
+    line-height: 1;
+  }
   .body, p.empty-text {
     padding: $-m;
   }
-  a {
+  a, p {
     word-wrap: break-word;
     word-break: break-word;
   }
